Sat Jun 22 02:18:07 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_pack): Specialized packers implemented.
	  (HOST_BIGENDIAN_P): New macro.
	  (ALIGNOF): New macro.
	  (CLEAR_LOWBITS): New macro.
	  (FILL_LOWBITS): New macro.
	  (swap_bdigit): New macro.
	  (bary_2comp): Returns an int.

	* internal.h (swap16): Moved from pack.c
	  (swap32): Ditto.
	  (swap64): Ditto.

Fri Jun 21 21:29:49 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (typedef enum): Introduce flags of major gc reason.
	* gc.c (garbage_collect_body): Ditto.
	* gc.c (gc_profile_flags): Ditto.
	* gc.c (gc_profile_dump_on): Ditto.

Fri Jun 21 21:11:53 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (allocate_sorted_heaps): remove unused variable `add'.

Fri Jun 21 20:50:32 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: constify RArray::as::ary and RArray::heap::ptr.
	  Use RARRAY_ASET() or RARRAY_PTR_USE() to modify Array objects.

	* array.c, gc.c: catch up above changes.

Fri Jun 21 20:32:13 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): fix WB miss.

Fri Jun 21 20:15:49 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: support write barrier protection for T_STRUCT.
	  Introduce the following C APIs:
	    * RSTRUCT_RAWPTR(st) returns pointer (do WB on your risk).
	      The type of returned pointer is (const VALUE *).
	    * RSTRUCT_GET(st, idx) returns idx-th value of struct.
	    * RSTRUCT_SET(st, idx, v) set idx-th value by v with WB.
	  And
	    * RSTRUCT_PTR(st) returns pointer with shady operation.
	      The type of returned pointer is (VALUE *).

	* struct.c, re.c, gc.c, marshal.c: rewrite with above APIs.

Fri Jun 21 19:38:37 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BDIGMAX): Use BIGRAD.
	  (BIGLO): Use BDIGMAX.
	  (bigdivrem1): Ditto.
	  (bigor_int): Ditto.
	  (rb_big_or): Ditto.

Fri Jun 21 19:18:48 2013  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_pack): Move the implementation for 'c' directive after